...
        LazyColumn(
            modifier = Modifier.fillMaxSize()
        ) {
            items(items = articles) { article ->
                ArticleCard(
                    context = this@SearchActivity,
                    article = article
                ) { setArticle(it) }
            }
        }
    }

    /**
...
                        FloatingActionButton(
                            onClick = { submit() },
                            containerColor = MaterialTheme.colorScheme.primary
                        ) {
                            Icon(
                                imageVector = Icons.Filled.Search,
                                contentDescription = "Add feed"
                            )
                        }
                    }
                    ArticleSearchResults()
                }
            }
...
