...
     */
    @Composable
    fun FeedTextField(textValue: TextFieldValue, onValueChange: (TextFieldValue) -> Unit) {
        OutlinedTextField(
            modifier = Modifier.fillMaxWidth(),
            value = textValue,
            placeholder = { Text("Enter Feed URL") },
            onValueChange = onValueChange,
            singleLine = true,
            maxLines = 1,
            keyboardActions = KeyboardActions(
                // When you press the enter button on the keyboard.
                onDone = { submit() }
...
