...
                        Intent(this@MainActivity, AddFeedActivity::class.java).apply {}
                    dataGateway.addFeeds(feedGroup.feeds)
                    startActivity(intent)
                }) {
                    Icon(
                        imageVector = Icons.Filled.Add,
                        contentDescription = "Add Feed Activity"
                    )
                }

                // Settings Activity Button
                IconButton(onClick = {
                    val intent =
...
